# sqlalchemy-jdbcapi

./: .gitignore  README.rst  flake.nix  pyproject.toml  setup.py
sqlalchemy_jdbcapi/: __init__.py  genericjdbc.py
